--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <div id="my-thing">
-<script src="my-thing.js"></script>
+<script src="thousandDangers.js"></script>
 <script>
-    var node = document.getElementById('my-thing')
+    var node = document.getElementById('thousandDangers')
     var app = Elm.Main.fullscreen();
     app.ports.getScrollPosition.subscribe(function(id){
         var el = document.getElementById(id)
