--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-<html>
+<?php
+    session_start();
+    if(isset($_SESSION['user_id']))
+    {
+        echo $_SESSION['user_id'];
+    }
+    echo "Hallo Welt";
+?>
+<html style="background-color:green">
+<body style="background-color:blue;margin:0px">
 <div id="my-thing">
 <script src="thousandDangers.js"></script>
 <script>
@@ -6,7 +15,8 @@
     var app = Elm.Main.fullscreen();
     app.ports.getScrollPosition.subscribe(function(id){
         var el = document.getElementById(id)
-        return app.ports.scrollPositionTold.send({x : el.scrollLeft, y : el.scrollTop})
+        return app.ports.scrollPositionTold.send({x : el.scrollLeft, y : el.scrollTop+el.top})
     })
 </script>
+</body>
 </html>
